--- a/index.html
+++ b/index.html
@@ -77,13 +77,12 @@
             </div>
             <div class="winning-container pop-container">
                 <p>:)</p>
-                <p>WINNING</p>
+                <p>You Won</p>
             </div>
         </div>
         <div class="footer">
             <span>
-                Crafted with by
-                @shrey141102<a href="https://github.com/shrey141102/"> -> GitHub</a>
+                Developed by @Leyo
             </span>
         </div>
     </div>
